# everything_in_its_place

./: LICENSE  README.md  pyproject.toml
configs/: config_add_with_extra_field.yaml
notebooks/: omegaconf.ipynb
src/everything_in_its_place/: configs  configurations.py  higher_level_functions.py  run.py
src/everything_in_its_place/configs/: config.yaml  config_add.yaml
tests/: test_base_functions.py
